--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,7 @@ html {
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 0 0% 9%;
+    --primary: 190 35% 45%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 92.1%;
     --secondary-foreground: 0 0% 9%;
@@ -27,7 +28,8 @@ html {
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 92.8%;
     --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    /* --ring: 0 0% 3.9%; */
+    --ring: 180 39% 52%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -52,6 +54,7 @@ html {
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
+    --primary: 180 39% 52%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
@@ -63,7 +66,8 @@ html {
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    /* --ring: 0 0% 83.1%; */
+    --ring: 180 39% 52%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
